# automaton

./: CMakeLists.txt  automaton.c  automaton.h  char_array.c  char_array.h  determinist.c  determinist.h  int_array.c  int_array.h  main.c  string.c  string.h  transition.c  transition.h
